--- a/style.css
+++ b/style.css
@@ -20,11 +20,19 @@ body{
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    
+}
+.logo p{
+    font-size: 25px;
+    margin-left: 20px;
+    margin-top: 35px;
+    font-family: "Modak", system-ui;
+    color: rgb(215, 148, 3);
 }
 .name{
     text-align: center;
     font-size: 25px;
-    margin-top: 450px;
+    margin-top: 370px;
     font-weight: 900;
     margin-bottom: 0;
 }
